--- a/frontend/src/static/index.html
+++ b/frontend/src/static/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
   <title>react-chat</title>
+  <link href="//fonts.googleapis.com/css?family=Open+Sans&amp;display=swap" rel="stylesheet">
 </head>
 
 <body>
