--- a/frontend/src/static/index.html
+++ b/frontend/src/static/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
-  <title>react-chat</title>
+  <title>RMessager</title>
   <link href="//fonts.googleapis.com/css?family=Open+Sans&amp;display=swap" rel="stylesheet">
 </head>
 
